corrected output dir in firebase conf

--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "dist/jashanfilms/browser",
+    "public": "dist/public",
     "ignore": [
       "firebase.json",
       "**/.*",
